--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_charts: ^0.5.0
+  syncfusion_flutter_charts: ^19.4.56
+
 
 dev_dependencies:
   flutter_test:
