--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_charts: ^0.5.0
   syncfusion_flutter_charts: ^19.4.56
+  getwidget: ^2.0.5
 
 
 dev_dependencies:
