--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   flutter_charts: ^0.5.0
   syncfusion_flutter_charts: ^19.4.56
   getwidget: ^2.0.5
+  percent_indicator: ^3.4.0
+
 
 
 dev_dependencies:
