--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,12 @@ dependencies:
   syncfusion_flutter_charts: ^19.4.56
   getwidget: ^2.0.5
   percent_indicator: ^3.4.0
+  firebase_core: ^1.17.1
+  firebase_auth: ^3.3.19
+  cloud_firestore: ^3.1.17
+  fluttertoast: ^8.0.9
+  email_validator: ^2.0.1
+  get: ^4.6.5
 
 
 
