--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,8 +41,10 @@ dependencies:
   firebase_core: ^1.17.1
   firebase_auth: ^3.3.19
   cloud_firestore: ^3.1.17
+  google_sign_in: ^5.3.2
   fluttertoast: ^8.0.9
   email_validator: ^2.0.1
+  shared_preferences: ^2.0.15
   get: ^4.6.5
 
 
